[tool.poetry]
name = "sonos-looper"
version = "0.1.0"
description = ""
authors = ["Ian McKenzie <ianmck98@gmail.com>"]
readme = "README.md"
packages = [{include = "sonos_looper"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
soco = "^0.30.3"
fire = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sonos-looper = "sonos_looper.main:cli"